--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
 			
 			<nav class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
+					
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 							<span class="sr-only">Toggle navigation</span>
@@ -38,9 +39,10 @@
 					  	</button>
 				  		<a class="navbar-brand" href="#">Project name</a>
 					</div>
+					
 					<div id="navbar" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="#">Home</a></li>
+							<li {% if page.url == "/index.html" %} class="active" {% endif %}><a href="/home">Home</a></li>
 							<li><a href="/about">About</a></li>
 							<li><a href="/cv">CV</a></li>
 							<li><a href="/blog">Blog</a></li>
