--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,12 +37,12 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 					  	</button>
-				  		<a class="navbar-brand" href="#">Project name</a>
+				  		<a class="navbar-brand" href="/">Project name</a>
 					</div>
 					
 					<div id="navbar" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
-							<li {% if page.url == "/index.html" %} class="active" {% endif %}><a href="/home">Home</a></li>
+							<li class={% if page.url == "/" %}"active"{% endif %}><a href="/">Home</a></li>
 							<li><a href="/about">About</a></li>
 							<li><a href="/cv">CV</a></li>
 							<li><a href="/blog">Blog</a></li>
