--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,7 @@
 		</head>
 		
 		<body>
-			<nav>
-				<ul>
-					<li><a href="/">Home</a></li>
-					<li><a href="/about">About</a></li>
-					<li><a href="/cv">CV</a></li>
-					<li><a href="/blog">Blog</a></li>
-				</ul>
-			</nav>
-			
+
 			<nav class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
 					
@@ -43,9 +35,9 @@
 					<div id="navbar" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
 							<li class={% if page.url == "/" %}"active"{% endif %}><a href="/">Home</a></li>
-							<li><a href="/about">About</a></li>
-							<li><a href="/cv">CV</a></li>
-							<li><a href="/blog">Blog</a></li>
+							<li class={% if page.url == "/about" %}"active"{% endif %}><a href="/about">About</a></li>
+							<li class={% if page.url == "/cv" %}"active"{% endif %}><a href="/cv">CV</a></li>
+							<li class={% if page.url == "/blog" %}"active"{% endif %}<a href="/blog">Blog</a></li>
 						</ul>
 					</div><!--/.nav-collapse -->
 				</div>
