--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:rlygoodemail@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/harrl7">github.com/harrl7</a></li>
 				</ul>
 			</footer>
 		</body>
