--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
 						<ul class="nav navbar-nav">
 							<li class={% if page.url == "/" %}"active"{% endif %}><a href="/">Home</a></li>
 							<li class={% if page.url == "/about/" %}"active"{% endif %}><a href="/about">About</a></li>
+							<li class={% if page.url == "/project1" %}"active"{% endif %}><a href="/project1">Project 1</a></li>
 							<li class={% if page.url == "/cv/" %}"active"{% endif %}><a href="/cv">CV</a></li>
 							<li class={% if page.url == "/blog/" %}"active"{% endif %}><a href="/blog">Blog</a></li>
 						</ul>
