--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    background-color: var(--col-purple);
 }
 p {
     font-size: 1.5em;
