--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 :root {
     --main-bg-color: #1C1C1C;
     --inner-bg-color: #F8EEE7;
@@ -8,12 +6,17 @@
     --col-dk-blue: #1D2731;
 }
 
-
 body {
     margin: 60px auto;
     width: 70%;
     background-color: var(--main-bg-color);
 }
+
+.content {
+    background-color: var(--inner-bg-color);
+}
+
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
@@ -24,6 +27,8 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
+
 a {
     text-decoration: none;
     color: #999;
@@ -31,6 +36,8 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
