--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ body {
 
 .content {
     background-color: var(--inner-bg-color);
+    padding: 10px;
+    margin: 30px;
+    margin-bottom: 50px;
+    
 }
 
 
