--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
 .content {
     background-color: var(--inner-bg-color);
     padding: 50px;
+    padding-top: 10px;
     margin: 30px;
     margin-bottom: 50px;
     
