--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
     margin: 60px auto;
     width: 70%;
     background-color: var(--main-bg-color);
+    font-family: "Georgia", serif;
 }
 
 .content {
