--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,9 @@ a:hover {
     text-decoration: underline;
 }
 
-
+h1 {
+    font-weight: bold;
+}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
