--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ a:hover {
 
 h1 {
     font-weight: bold;
-    color: var(--col-purple);
+    color: var(--main-bg-color);
 }
 p {
     font-size: 1.5em;
