--- a/css/main.css
+++ b/css/main.css
@@ -47,11 +47,13 @@ h1 {
     font-weight: bold;
     color: var(--main-bg-color);
 }
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
 }
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
@@ -70,6 +72,10 @@ table, td {
     border-style: solid;
     border-width: 1px;   
     padding: 5px;
+}
+
+figcaption {
+    font-size: 12pt;
 }
 
 img {
