--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
 							<li class={% if page.url == "/" %}"active"{% endif %}>			<a href="/">Home</a></li>
 							<li class={% if page.url == "/education/" %}"active"{% endif %}>	<a href="/education">Education</a></li>
 							<li class={% if page.url == "/android/" %}"active"{% endif %}>		<a href="/android">Android</a></li>
+							<li class={% if page.url == "/unity/" %}"active"{% endif %}>		<a href="/unity">Unity</a></li>
 						</ul>
 					</div><!--/.nav-collapse -->
 				</div>
