--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ img {
 
 #Vision_Tools figure {
     margin: 20px auto;
-    background-color: var(--inner-bg-color);
+    background-color: var(--col-dk-grey);
 }
 
 
