--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,8 @@ figcaption {
 img {
     border-style: solid;
     border-width: 2px;   
+    display: block;
+    margin: auto;
 }
 
 #Nearby_Sites_Table {
@@ -98,8 +100,7 @@ img {
 }
 
 #Vision_Tools figure img {
-    margin: auto;
-    width: 70%;
+
 }
 
 #Vision_Tools figure figcaption {
