--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ img {
 #White_Line {
     background-color: var(--col-lt-grey);   
     height: 1px;
+    margin: 5px 0;
 }
 
 #Vision_Tools figure figcaption {
