--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,7 @@ body {
     padding: 50px;
     padding-top: 10px;
     margin: 30px;
-    margin-bottom: 50px;
-    
+    margin-bottom: 50px; 
 }
 
 
@@ -95,6 +94,10 @@ img {
     color: var(--col-lt-grey);
 }
 
+#Nearby_Sites_Fig {
+   margin: 10px 10px;
+}
+
 #Vision_Tools figure {
     margin: 20px auto;
     padding: 10px;
@@ -108,7 +111,7 @@ img {
 #White_Line {
     background-color: var(--col-lt-grey);   
     height: 1px;
-    margin: 15px 0;
+    margin: 10px 0;
 }
 
 #Vision_Tools figure figcaption {
