--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ img {
     color: var(--col-lt-grey);
 }
 
-.Nearby_Sites_Fig figcaption {
+#Nearby_Sites_Fig figcaption {
    margin: 10px 10px;
 }
 
