--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ img {
     color: var(--col-lt-grey);
 }
 
-#Nearby_Sites_Fig figcaption {
+.Nearby_Sites_Fig figcaption {
    margin: 10px 10px;
 }
 
@@ -114,7 +114,7 @@ img {
     margin: 10px 0;
 }
 
-.Vision_Tools figure figcaption {
+#Vision_Tools figure figcaption {
     color: var(--col-lt-grey);
     margin: 5px auto;
     width: 95%;
