--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,10 @@ a:hover {
     text-decoration: underline;
 }
 
+section {
+    margin: 5px 50px;   
+}
+
 h1 {
     font-weight: bold;
     color: var(--main-bg-color);
