--- a/css/main.css
+++ b/css/main.css
@@ -86,9 +86,6 @@ table, td {
     padding: 5px;
 }
 
-figcaption {
-    font-size: 12pt;
-}
 
 img {
     border-style: solid;
@@ -106,15 +103,14 @@ img {
 }
 
 .Fig_Table_Item {
-    width: 90%;
-    margin: 20px auto;
-    padding: 10px;
+    padding: 1px;
     
 }
 
 .Fig_Table_Item figcaption {
     color: var(--col-lt-grey);
     margin: 5px auto;
+    font-size: 10pt;
 }
 
 .Fig_Table_Item img {
@@ -123,7 +119,14 @@ img {
 
 
 
-#White_Line {
+.Full_Width_Fig {
+     margin: 0 auto;
+    background-color: var(--col-dk-grey);
+    color: var(--col-lt-grey);
+    width: 100%;
+}
+
+.White_Line {
     background-color: var(--col-lt-grey);   
     height: 1px;
     margin: 10px 0;
