--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 						</ul>
 						
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href=".content">Top</a></li>
+							<li><a href="#top">Top</a></li>
 						</ul>
 						
 					</div><!--/.nav-collapse -->
