--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,17 @@ a:hover {
 
 
 /*
+*  ======== Footer ========
+*/ 
+
+footer {
+     border-top: 1px solid #d5d5d5;
+     font-size: .8em;
+ }
+
+ 
+
+/*
 *  ======== Contents Layout ========
 */ 
 
