--- a/css/main.css
+++ b/css/main.css
@@ -123,11 +123,11 @@ article {
     background-color: var(--col-dk-grey);
     color: var(--col-lt-grey);
     width: 100%;
+	table-layout: auto;
 }
 
 .Fig_Table_Item {
     padding: 1px;
-    width: 100%;
 }
 
 .Fig_Table_Item figcaption {
