--- a/css/main.css
+++ b/css/main.css
@@ -132,9 +132,8 @@ article {
 
 .Fig_Table_Item figcaption {
     color: var(--col-lt-grey);
-    margin: 5px auto;
+    #margin: 5px auto;
     font-size: 10pt;
-	width:30%;
 }
 
 .Fig_Table_Item img {
