--- a/css/main.css
+++ b/css/main.css
@@ -135,8 +135,7 @@ article {
     padding: 1px;
 }
 
-.Fig_Table figcaption {
-    color: var(--col-lt-grey);
+.Fig_Table_Caption_Row {
     margin: 5px auto;
     font-size: 10pt;
 	height: 100%;
