--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ article {
     padding: 1px;
 }
 
-.Fig_Table_Caption_Row {
+.Fig_Table_Caption_Row td{
     margin: 5px auto;
     font-size: 10pt;
 	height: 100%;
