--- a/css/main.css
+++ b/css/main.css
@@ -135,10 +135,11 @@ article {
     padding: 1px;
 }
 
-.Fig_Table_Caption_Row td{
+.Fig_Table_Caption_Row td {
     margin: 5px auto;
     font-size: 10pt;
 	height: 100%;
+	width: 100%;
 }
 
 .Fig_Table_Item img {
