--- a/css/main.css
+++ b/css/main.css
@@ -135,14 +135,19 @@ article {
     padding: 1px;
 }
 
+.Fig_Table_Item img {
+    width: 100%;
+}
+
+.Fig_Table_Item figcaption {
+    
+}
+
 .Fig_Table_Caption_Row td {
     margin: 5px auto;
     font-size: 10pt;
 }
 
-.Fig_Table_Item img {
-    width: 100%;
-}
 
 
 /*
